converted FA spans to components; removed glyficons; fixed modal 15px shift

--- a/app/styles/_bootstrap-custom.scss
+++ b/app/styles/_bootstrap-custom.scss
@@ -1,4 +1,4 @@
-/*!
+  /*!
  * Bootstrap v3.3.7 (http://getbootstrap.com)
  * Copyright 2011-2016 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
@@ -23,7 +23,7 @@ $dropdown-link-hover-color: nothing;
 // Reset and dependencies
 @import "bootstrap/normalize";
 @import "bootstrap/print";
-@import "bootstrap/glyphicons";
+// @import "bootstrap/glyphicons";
 
 // Core CSS
 @import "bootstrap/scaffolding";
@@ -66,3 +66,11 @@ $dropdown-link-hover-color: nothing;
 // Utility classes
 @import "bootstrap/utilities";
 @import "bootstrap/responsive-utilities";
+
+
+//fix modal shifting
+body.modal-open,
+.modal-open .navbar-fixed-top,
+.modal-open .navbar-fixed-bottom {
+  padding-right: 0px !important;
+}
