--- a/app/styles/_login-modal.scss
+++ b/app/styles/_login-modal.scss
@@ -6,7 +6,7 @@
 .login-modal-icon {
   // color: #0078b3;
   font-size: 1.5em;
-  padding: 0% 3%;
+  padding: 3% 3%;
 }
 
 .login-email {
